fixed video width issue on mobile

--- a/style.css
+++ b/style.css
@@ -157,4 +157,8 @@ hr {
         height: auto;
     }
 
+    .piece-video {
+        max-width: 100%;
+    }
+
 }
